<resources>
    <string name="app_name">Events &amp; Functions</string>
    <string name="annual">Annual</string>
    <string name="detail">Every event at our School is an opportunity for students to showcase their talents and capabilities and learn new skills. The programmes we organise include Annual Day, Sports Day, Christmas Carnival and many other festive activities.</string>
    <string name="_1_annual_day_celebrations">1. Annual Day Celebrations</string>
    <string name="_2_children_s_day_celebrations">2. Children\'s Day Celebrations</string>
    <string name="_3_christmas_day_celebrations">3. Christmas Day Celebrations</string>
    <string name="_4_diwali_celebrations">4. Diwali Celebrations</string>
    <string name="_5_earth_day_celebrations">5. Earth Day Celebrations</string>
    <string name="_6_environment_day_celebrations">6. Environment Day Celebrations</string>
    <string name="children">Children</string>
    <string name="christmas">Christmas</string>
    <string name="diwali">Diwali</string>
    <string name="earth">earth</string>
    <string name="environment">Environment</string>
</resources>
